# nft-detector

./: README.md  config.example.yaml  config.yaml  pyproject.toml
nftdetector/: __init__.py  __main__.py  analyzer.py  autodetect.py  detector.py  floor.py  notifier.py  scanner.py
